[tool.poetry]
name = "lexsrt"
version = "0.1.0"
description = "The purpose of this script is to get all the senses for all the words in a SRT-file from Wikidata"
authors = ["Dennis Priskorn"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.3.0"
pandas = "^2.1.0"
argparse = "^1.4.0"
srt = "^3.5.3"
requests = "^2.31.0"
spacy = "^3.6.1"
wikibaseintegrator = "^0.12.4"
rich = "^13.5.2"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^23.1.0"
codespell = "^2.2.2"
coverage = "^7.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pyupgrade = "^3.3.1"
types-python-dateutil = "^2.8.19.13"
types-requests = "^2.31.0.1"
ruff = "^0.0.278"
safety = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
